force-app/main/default/objects/Associated_Account__c/Associated_Account__c.object-meta.xml
<CustomObject>
    <label>Associated Account</label>
    <nameField>
        <displayFormat>AA-{0000000}</displayFormat>
        <label>Associated Account Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Associated Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>