force-app/main/default/objects/Associated_Account__c/fields/Feature_Details__c.field-meta.xml
<CustomField>
    <fullName>Feature_Details__c</fullName>
    <inlineHelpText>Describe how and where the account is being featured for the activity</inlineHelpText>
    <label>Feature Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>