force-app/main/default/objects/Associated_Account__c/fields/Partner_Brand_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Brand_Account__c</fullName>
    <label>Partner/Brand Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Marketing Partner, Brand, Tourism</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Associated Accounts(Brands/Partners)</relationshipLabel>
    <relationshipName>Associated_Activities</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>